# FIAP-IA

./: .gitignore  README.md  sensores.db
fase1/cap1/: README.md  analise_estatistica.R  farmtech_solutions.py  gerar_dados_teste.py  link.txt  resumo_vants.docx
fase2/: README.md
fase2/cap1/: README.md  farmtech_mode.dmd
fase2/cap6/: README.md  diagnostico_solo.py
fase2/cap7/: Dados_Agroneg_cio.csv  analise_agronegocio.r
fase3/: README.md
fase3/esp32/: README.md  main.cpp  platformio.ini
fase3/python/: README.md  banco.py  dados_exemplo.sql  dashboard.py
fase5/FarmTech/: AWS_COST_ANALYSIS_GUIDE.md  FINAL_CHECKLIST.md  README.md  VIDEO_GUIDE.md  farmtech_ml_analysis.ipynb  requirements.txt
fase5/enterprise_challenge_sprint_3/: .gitignore  README.md  pyproject.toml  requirements.txt  video_script.md
fase5/enterprise_challenge_sprint_3/db/: init_schema.sql
fase5/enterprise_challenge_sprint_3/notebooks/: 01_exploratory_analysis.ipynb  02_machine_learning_model.ipynb  03_comparative_analysis.ipynb  03_comparative_analysis_simplified.ipynb
fase5/enterprise_challenge_sprint_3/reports/: DER_Description.md
fase5/enterprise_challenge_sprint_3/reports/figures/: comparative_analysis_summary.txt  detailed_results.csv
fase5/enterprise_challenge_sprint_3/src/: comparative_analysis.py
fase5/enterprise_challenge_sprint_3/src/data_ml_viz_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fase5/enterprise_challenge_sprint_3/src/etl/: load_to_duckdb.py
fase5/enterprise_challenge_sprint_3/src/ml/: model_trainer.py
(+5 files in other folders)
